# bseal-cpp-0

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  FORMAT_CONFORMANCE.md  IMPLEMENTATION_GUIDE.md  LICENSE  NOTICE  README.md  SECURITY_NOTES.md  VERIFY.md  vcpkg.json
.clusterfuzzlite/: Dockerfile  build.sh
.github/workflows/: cflite_batch.yml  cflite_pr.yml  ci.yml  hygiene.yml  release.yml
build-gui-test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  bseal  bseal-gui  bseal_gui_error_presenter_gtests  bseal_gui_gtests  bseal_gui_integration_gtests  bseal_gui_keyfile_gtests  bseal_gui_memlock_gtests  bseal_gui_nonpersistence_gtests  cmake_install.cmake
build-gui-test/.qt/: QtDeploySupport.cmake
build-gui-test/bseal-gui_autogen/: deps
build-gui-test/bseal_gui_error_presenter_gtests_autogen/: deps
build-gui-test/bseal_gui_gtests_autogen/: deps
build-gui-test/bseal_gui_integration_gtests_autogen/: deps
build-gui-test/bseal_gui_keyfile_gtests_autogen/: deps  moc_predefs.h
build-gui-test/bseal_gui_memlock_gtests_autogen/: deps
build-gui-test/bseal_gui_nonpersistence_gtests_autogen/: deps
build-gui-test/tests/: CTestTestfile.cmake  Makefile  bseal_app_gtests  bseal_app_gtests[1]_include.cmake  bseal_app_gtests[1]_tests.cmake  bseal_archive_gtests  bseal_archive_gtests[1]_include.cmake  bseal_archive_gtests[1]_tests.cmake  bseal_common_gtests  bseal_common_gtests[1]_include.cmake  bseal_common_gtests[1]_tests.cmake  bseal_crypto_gtests  bseal_crypto_gtests[1]_include.cmake  bseal_crypto_gtests[1]_tests.cmake  bseal_integration_gtests  bseal_integration_gtests[1]_include.cmake  bseal_integration_gtests[1]_tests.cmake  bseal_io_gtests  bseal_io_gtests[1]_include.cmake  bseal_io_gtests[1]_tests.cmake  bseal_perf_gtests  bseal_perf_gtests[1]_include.cmake  bseal_perf_gtests[1]_tests.cmake  bseal_pipeline_gtests  bseal_pipeline_gtests[1]_include.cmake  bseal_pipeline_gtests[1]_tests.cmake  bseal_platform_gtests  bseal_platform_gtests[1]_include.cmake  bseal_platform_gtests[1]_tests.cmake  bseal_smoke_tests  cmake_install.cmake
cmake/: Coverage.cmake  ProjectWarnings.cmake  Sanitizers.cmake  VerifySubmodules.cmake
cmake/external_libraries/: argon2.cmake  blake3.cmake
docs/: BASELINE.md  COVERAGE.md  CPU_REQUIREMENTS.md  CRYPTOGRAPHY.md  DURABILITY.md  FORMAT.md  FUZZING.md  HIGH_LEVEL_DESIGN.md  High_Level_Design.md  Incentive.md  KDF_POLICY.md  MAINTAINABILITY.md  OPERATOR_GUIDE.md  RECOMMENDED.md  RELEASE_CHECKLIST.md  SECURITY_NOTES.md  SELF_TEST.md  THREAT_MODEL.md
scripts/: check-hygiene.sh  check_source_manifest.py  reproduce_crash_local.sh  run_fuzzer_local.sh  update_submodule.sh
src/: main.cpp
src/app/: BsealApp.cpp  BsealApp.hpp  CoreApi.cpp  CoreApi.hpp  SelfTest.cpp  SelfTest.hpp
src/archive/: ArchiveReader.cpp  ArchiveReader.hpp  ArchiveWriter.cpp  ArchiveWriter.hpp  Metadata.hpp  PathSanitizer.cpp  PathSanitizer.hpp  PublicHeaderAuth.cpp  PublicHeaderAuth.hpp  RecordFormat.cpp  RecordFormat.hpp  SafeOutputTree.cpp  SafeOutputTree.hpp
src/cli/: Args.cpp  Args.hpp
src/common/: CheckedArithmetic.hpp  Endian.hpp  Errors.hpp  SizeParser.hpp  Types.hpp
src/crypto/: AesGcmBackend.cpp  AesGcmBackend.hpp  CryptoBackend.hpp  Kdf.cpp  Kdf.hpp  KeySchedule.cpp  KeySchedule.hpp  SecureBuffer.cpp  SecureBuffer.hpp  XChaCha20Poly1305Backend.cpp  XChaCha20Poly1305Backend.hpp
src/gui/: DecryptOptionsWidget.cpp  DecryptOptionsWidget.hpp  (+13 more)
submodules/: PINS.md
tests/: CMakeLists.txt  smoke_tests.cpp
tests/app/: TestCoreApi.cpp
tests/archive/: ArchiveTestUtils.hpp  PublicHeaderAuth.hpp  TestArchiveReader.cpp  TestArchiveReaderDurability.cpp  TestArchiveWriter.cpp  TestMalformedRecords.cpp  TestMetadata.cpp  TestPathSanitizer.cpp  TestPublicHeaderAuth.cpp  TestRecordFormat.cpp  TestRecordPayloadCap.cpp  TestSafeOutputTree.cpp
tests/common/: TestCheckedArithmetic.cpp  TestSizeParser.cpp
tests/crypto/: TestAesGcmBackend.cpp  TestAesGcmRequiresHardware.cpp  TestCryptoBackendConcurrency.cpp  TestKatVectors.cpp  TestKdf.cpp  TestKdfSecureMemory.cpp  TestKeySchedule.cpp  TestSecureBuffer.cpp  TestXChaCha20Poly1305Backend.cpp
tests/fixtures/format-v1/: README.md
tests/fixtures/format-v1/archive/: expected_content.txt
tests/fuzz/: CMakeLists.txt  FuzzArchiveReader.cpp  FuzzChunkFrameHeader.cpp  FuzzCommon.hpp  FuzzGlobalPublicHeader.cpp  FuzzPathSanitizer.cpp  FuzzRecordFormat.cpp  FuzzShardPublicHeader.cpp
tests/fuzz/corpus/path_sanitizer/: deep_relative.txt  double_traversal.txt
tests/fuzz/dict/: archive_reader.dict  chunk_frame_header.dict  global_public_header.dict  record_format.dict  shard_public_header.dict
tests/fuzz/tools/: generate_seeds.py
tests/gui/: TestGuiAdvancedDecrypt.cpp  TestGuiAdvancedEncrypt.cpp  TestGuiCoreIntegration.cpp  TestGuiErrorPresenter.cpp  TestGuiFeatureParity.cpp  TestGuiMemoryLock.cpp  TestGuiNonPersistence.cpp  TestGuiOptions.cpp  TestGuiOptionsWidgets.cpp  TestGuiPreview.cpp  TestGuiPreviewUnit.cpp  TestGuiValidationOrder.cpp  TestMainWindowKeyfiles.cpp  TestSecurePassphraseField.cpp
tests/integration/: TestBlackBoxCli.cpp  TestCliRegression.cpp  TestFormatV1Archive.cpp  TestKdfPolicyCli.cpp  TestSelfTestCommand.cpp  TestStdoutEncrypt.cpp
tests/io/: TestAsyncReader.cpp  TestAsyncWriter.cpp  TestBufferPool.cpp  TestFormatV1Kat.cpp  TestMalformedShards.cpp  TestShardFrameHash.cpp  TestShardReader.cpp  TestShardWriter.cpp  TestShardWriterDurability.cpp  TestTornWrite.cpp  format_conformance_test.cpp
tests/perf/: TestAeadThroughput.cpp  TestKdfLatency.cpp
tests/pipeline/: PipelineTestSupport.hpp  TestDecryptPipeline.cpp  TestEncryptPipeline.cpp  TestMultiWorkerPipeline.cpp  TestWorkQueue.cpp
tests/platform/: TestCpuFeatures.cpp  TestDurableFile.cpp  TestHardwareAes.cpp  TestMemoryLock.cpp  TestPassphrasePrompt.cpp  TestProcessMemoryLock.cpp  TestRandom.cpp
tests/scripts/: check_docs_language.py  check_gui_docs.py  check_release_checklist.py  scan_gui_persistence.py  scan_unsafe_bypasses.py  test_license_headers.py  test_scan_unsafe_bypasses.py  test_submodule_pins.py
(+49 files in other folders)
